--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src='js/animation.js'></script>
     <script src='js/player.js'></script>
     <script src='js/enemy.js'></script>
+    <script src='js/standart-block.js'></script>
     <script src='js/audio.js'></script>
 
 </body>
